# BlueRove_Integration

./: CMakeLists.txt  README.md  package.xml
Storage/: AccessTokens.txt  PlotResults.py  StorageInstructions.txt  test.txt
Storage/1/31/Paths/: path1.txt
Storage/2/: MasonNotes.txt
Storage/3/22/: path1.txt  path2.txt
Storage/last_try/: 2022-12-09-04-17-01.bag
launch/: launch.launch  pid_test.launch
lib/PathPlanner/PathPlanners/: A_star.cpp  A_star.h  goPath.cpp  goPath.h  ompl_RRTConnect.cpp  ompl_RRTConnect.h
lib/PathPlanner/PlannerTemplates/: PathPlanner.h  _Astar.h  _goPath.h  _omplRRTConnect.h
lib/Path_Planner/: A_star.cpp  A_star.h  goPath.cpp  goPath.h
lib/pid/: ros_pid.cpp  ros_pid.h
rosbags/: 2022-05-20-13-26-01.bag
src/: test_subscriber.cpp
src/Path_Planner/: pp_goPath.cpp  print_path.py  store.txt
src/bluerov_communication/: ROSMAV.py  dvl_client.py  get_test_data.py  pid_test_interface.py  pymavlink_interface.py
src/human_interface/: ROSHUM.py  lawnmower.py  readwaypoint.txt
src/pid/: pp_pid.cpp  test_pid.cpp
srv/: byte_update.srv  control_pathplanner.srv  control_pid.srv  cv_action.srv  pathplanner_update_waypoint.srv  resetTrigger.srv  update_waypoint.srv  wpTrigger.srv
